# JobWorkFlow

./: .gitignore  .pre-commit-config.yaml  MCP_TOOLS_HANDBOOK.md  README.md  TESTING.md  pyproject.toml  requirements.txt
.agent/workflows/: README.md  intake-pipeline.md
.github/workflows/: ci.yml
.kiro/: steering.md
data/templates/: full_resume.md  full_resume_example.md  resume_skeleton_example.tex
docs/: pipeline-prompt.md
docs/skills/: tex-build.md
mcp-server/: db.go  filter.go  go.mod  main.go  tool_auto_filter_jobs.go  tool_career_tailor.go  tool_initialize_jobs_batch.go  tool_update_jobs_status.go  tool_update_tracker_status.go  tracker.go  types.go  util.go
mcp-server-python/: CONFIGURATION_SUMMARY.md  DEPLOYMENT.md  MCP_SERVER_INTEGRATION.md  QUICKSTART.md  README.md  SMOKE_TEST_RESULTS.md  __init__.py  config.py  manual_smoke_test.py  mcp-config-example.json  server.py  smoke_test_scrape_jobs.py  smoke_test_scrape_jobs_production.py  start_server.sh
mcp-server-python/db/: __init__.py  jobs_ingest_writer.py  jobs_reader.py  jobs_writer.py
mcp-server-python/docs/: ai_context_renderer_implementation.md
mcp-server-python/models/: errors.py  job.py  status.py
mcp-server-python/schemas/: __init__.py  bulk_read_new_jobs.py  bulk_update_job_status.py  career_tailor.py  common.py  finalize_resume_batch.py  ingestion.py  initialize_shortlist_trackers.py  scrape_jobs.py  update_tracker_status.py
mcp-server-python/tests/: test_ai_context_renderer.py  test_ai_context_renderer_integration.py  test_artifact_paths.py  test_artifact_paths_integration.py  test_bulk_read_new_jobs.py  test_bulk_read_new_jobs_schemas.py  test_bulk_update_job_status.py  test_bulk_update_job_status_schemas.py  test_capture_writer.py  test_career_tailor.py  test_career_tailor_schemas.py  test_checkpoint_task4.py  test_config.py  test_cursor.py  test_cursor_properties.py  test_errors.py  test_file_ops.py  test_file_ops_integration.py  test_finalize_resume_batch.py  test_finalize_resume_batch_schemas.py  test_finalize_validators.py  test_finalize_validators_integration.py  test_initialize_shortlist_trackers_schemas.py  test_initialize_shortlist_trackers_tool.py  test_job_schema.py  test_jobs_ingest_writer.py  test_jobs_reader.py  test_jobs_writer.py  test_jobspy_adapter.py  test_latex_compiler.py  test_latex_guardrails.py  test_pagination.py  test_response_structure.py  test_scrape_jobs_idempotency.py  test_scrape_jobs_schemas.py  (+17 more)
scripts/: check_job.sh  import_jobspy_to_db.py  jobspy_batch_run.py  run_mcp_server.sh  uninstall_jobspy_launchd.sh
trackers/: Job Application.md  README.md  job-application.md  template.md
(+70 files in other folders)
